--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     zoom: 1.0;
 }
 body{
-    background:linear-gradient(to bottom,#e6d7c5,#FFFFFF);
+    background:#faf4ee;
     font-family:Calisto MT ;
 }
 
@@ -15,7 +15,8 @@ body{
 * {
  margin: 0;
  padding: 0;
- box-sizing: border-box;
+    box-sizing: border-box;
+ 
 }
 
 a {
@@ -33,6 +34,7 @@ li {
 }
 
 .navbar {
+   
     transition: 0.6s;
     top: 0;
     left: 0;
@@ -42,9 +44,10 @@ li {
     align-items: center;
     justify-content: space-between;
     padding: 20px;
-    background:linear-gradient(to bottom,#e6d7c5,#FFFFFF);
+   background: rgba(250, 244, 238,0.8);
     color: #ed8100;
     height: 75px;
+    z-index: 100;
 }
 
 .nav-links a {
@@ -79,121 +82,54 @@ a:hover{
 }
 
 .navbar .sticky ul li a{
+    z-index: 100;
     color: black;
 }
 
              /*SLIDER*/
-.slides {
-    padding: 0;
-    width: 1100px;
-    height: 520px;
-    display: block;
-    margin: 0 auto;
-    position: relative;
+.mySlides {display: none;}
+
+
+/* Slideshow container */
+.slideshow-container {
+  
+  position: relative;
+  margin: auto;
 }
 
-.slides * {
-    user-select: none;
-    -ms-user-select: none;
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -webkit-touch-callout: none;
+
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 12px;
+  width: 12px;
+  margin: 0 3px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
-.slides input { display: none; }
-
-.slide-container { display: block; }
-
-.slide {
-    left: -125px;
-    top: 0;
-    opacity: 0;
-    width: 1348px;
-    height: 520px;
-    display: block;
-    position: absolute;
-
-    transform: scale(0);
-
-    transition: all .7s ease-in-out;
+.active {
+  background-color: #717171;
 }
 
-.slide img {
-    width: 100%;
-    height: 100%;
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
-.nav label  {
-    
-    width: 200px;
-    height: 100%;
-    display: none;
-    position: absolute;
-
-	  opacity: 0;
-    z-index: 9;
-    cursor: pointer;
-
-    transition: opacity .2s;
-
-    color: #FFF;
-    font-size: 156pt;
-    text-align: center;
-    line-height: 380px;
-    font-family: "Varela Round", sans-serif;
-    background-color: rgba(255, 255, 255, .3);
-    text-shadow: 0px 0px 15px rgb(119, 119, 119);
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
-.slide:hover + .nav label { opacity: 0.5; }
-
-.nav label:hover { opacity: 1; }
-
-.nav .next { right: 0; }
-
-input:checked + .slide-container  .slide {
-    opacity: 1;
-
-    transform: scale(1);
-
-    transition: opacity 1s ease-in-out;
-}
-
-input:checked + .slide-container .nav label { display: block; }
-
-.nav-dots {
-	width: 100%;
-	bottom: 9px;
-	height: 11px;
-	display: block;
-	position: absolute;
-	text-align: center;
-}
-
-.nav-dots .nav-dot {
-	top: -5px;
-	width: 11px;
-	height: 11px;
-	margin: 0 4px;
-	position: relative;
-	border-radius: 100%;
-	display: inline-block;
-	background-color: rgba(0, 0, 0, 0.6);
-}
-
-.nav-dots .nav-dot:hover {
-	cursor: pointer;
-	background-color: rgba(0, 0, 0, 0.8);
-}
-
-input#img-1:checked ~ .nav-dots label#img-dot-1,
-input#img-2:checked ~ .nav-dots label#img-dot-2,
-input#img-3:checked ~ .nav-dots label#img-dot-3,
-input#img-4:checked ~ .nav-dots label#img-dot-4,
-input#img-5:checked ~ .nav-dots label#img-dot-5,
-input#img-6:checked ~ .nav-dots label#img-dot-6 {
-	background: rgba(0, 0, 0, 0.8);
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
         /*BODY*/
@@ -216,9 +152,13 @@ h2{
     
 }
 .table2{
-    text-align:justify;
+    text-align:center;
+    
+    
 }
+
 p{
+    text-align: justify;
     font-family: Garamond, sans-serif; 
     font-size: 20px; 
     font-weight: 550 ; 
@@ -235,13 +175,13 @@ p{
     color: black;
 }
 h4{
-    
+   
     text-align: center; 
     color: #ed8100;
 }
 ul{
     list-style-type: none; 
-    text-align:left ; 
+    text-align:match-parent; 
     color: #555555 ;
     font-family: Candara;
 }
@@ -254,15 +194,10 @@ h1{
     text-align: center; 
     color: #ed8100;
 }
-.th2{
-    color: #bc6600 ;
-    font-family: Candara, sans-serif; 
-    font-size: 20px; 
-    font-weight: 550 ;  
-    text-align: center;
-}
+
 .p2{
-    font-family: Georgia, sans-serif;  
+    text-align:left;
+    font-family: Raleway, sans-serif;  
     font-size: 15px; 
     font-weight: 550 ; 
     color: #505050;
@@ -272,10 +207,66 @@ caption{
     color: #a05c0a ; 
     font-size: 30px;
 }
-                     /*FOOTER*/
+
+     /*IMAGES*/
+.image{
+    position:relative;
+    
+}
+.image__img{
+    display: block;
+    width: 100%;
+    
+    
+}
+
+.image__overlay{
+    
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.1);
+    color: #F5F5F5	;
+     text-shadow: 2px 2px 8px #000000;
+    font-family: Candara, sans-serif; 
+    font-size: 13px; 
+    font-weight: 550 ;  
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.25s;
+}
+.image__overlay > *{
+    transform: translateY(20px);
+    transition: transform 0.25s;
+    
+}
+.image__overlay--blur{
+    backdrop-filter: blur(5px);
+}
+.image__overlay:hover{
+    opacity: 1;
+    
+}
+.image__overlay:hover > *{
+    transform: translateY(0);
+    
+}
+.image__title{
+    font-size: 2em;
+    font-weight: bold;
+    
+}
+
+      /*FOOTER*/
 
 footer{
-    background:linear-gradient(to bottom,#e6d7c5,#FFFFFF);
+    background:#e6d7c5;
 }
                       /*SOCIAL MEDIA ICONS*/
                 
