--- a/projet github/test.css
+++ b/projet github/test.css
@@ -7,7 +7,7 @@
     zoom: 1.0;
 }
 body{
-    background:#faf4ee;
+    background:linear-gradient(to bottom,#e6d7c5,#FFFFFF);
     font-family:Calisto MT ;
 }
 
@@ -15,8 +15,7 @@ body{
 * {
  margin: 0;
  padding: 0;
-    box-sizing: border-box;
- 
+ box-sizing: border-box;
 }
 
 a {
@@ -34,7 +33,6 @@ li {
 }
 
 .navbar {
-   
     transition: 0.6s;
     top: 0;
     left: 0;
@@ -44,7 +42,7 @@ li {
     align-items: center;
     justify-content: space-between;
     padding: 20px;
-   background: rgba(250, 244, 238,0.8);
+    background:linear-gradient(to bottom,#e6d7c5,#FFFFFF);
     color: #ed8100;
     height: 75px;
     z-index: 100;
@@ -153,10 +151,7 @@ h2{
 }
 .table2{
     text-align:center;
-    
-    
 }
-
 p{
     text-align: justify;
     font-family: Garamond, sans-serif; 
@@ -175,13 +170,13 @@ p{
     color: black;
 }
 h4{
-   
+    
     text-align: center; 
     color: #ed8100;
 }
 ul{
     list-style-type: none; 
-    text-align:match-parent; 
+    text-align:left ; 
     color: #555555 ;
     font-family: Candara;
 }
@@ -195,8 +190,15 @@ h1{
     color: #ed8100;
 }
 
+.th2{
+    color: #bc6600 ;
+    font-family: Candara, sans-serif; 
+    font-size: 20px; 
+    font-weight: 550 ;  
+    text-align: center;
+}
 .p2{
-    text-align:left;
+    text-align: center;
     font-family: Raleway, sans-serif;  
     font-size: 15px; 
     font-weight: 550 ; 
@@ -228,10 +230,9 @@ caption{
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,0.1);
-    color: #F5F5F5	;
-     text-shadow: 2px 2px 8px #000000;
+    color: #ffffff ;
     font-family: Candara, sans-serif; 
-    font-size: 13px; 
+    font-size: 15px; 
     font-weight: 550 ;  
     text-align: center;
     display: flex;
@@ -266,7 +267,7 @@ caption{
       /*FOOTER*/
 
 footer{
-    background:#e6d7c5;
+    background:linear-gradient(to bottom,#e6d7c5,#FFFFFF);
 }
                       /*SOCIAL MEDIA ICONS*/
                 
