--- a/Contact-us.css
+++ b/Contact-us.css
@@ -11,14 +11,14 @@ body{
     width: 100%;
     height: 100%;
     position: fixed;
-    background-color: rgba(229,222,199,0.4);
+    background-color: rgba(255, 243, 230, 0.4);
 }
 
 form{
 
     max-width: 550px;
     width: 100%;
-    background:linear-gradient(to bottom,#e6d7c5,#F2EEE3);
+     background: rgba(255, 243, 230, 0.9);
     margin: 17vh auto 0 auto;
     padding: 15px;
     border-radius: 3px;
@@ -28,13 +28,14 @@ form{
 h1{
     margin: 0;
     text-align: center;
-    font-family: Trebuchet MS, sans-serif; 
+    font-family: Calibri Light;
      color: #555555;
 }
 label{
     display: block;
     margin: 20px 0;
     font-family: Trebuchet MS, sans-serif; 
+
     color: #555555;
 }
 
@@ -68,11 +69,12 @@ input[type="submit"]{
     margin-top: 30px;
     width: 90%;
     max-width: 200px;
-    background: linear-gradient(to right, #e6d7c5,#F2EEE3);
+    background: rgba(255, 243, 230, 0.8);
     color: #555555;
     font-size: 17px;
     cursor: pointer;
     border-radius: 3px;
+    
 }
 
 .error{
